app/(website)/index.css
@layer reset, base, tokens, recipes, utilities;

@layer base {
    :root {
        overscroll-behavior-y: none !important;

        /* Font */
        /* font-variant-numeric: slashed-zero; */
        font-kerning: normal;
        font-variant-ligatures: common-ligatures contextual;
        -moz-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
        -ms-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
        -webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
        font-feature-settings: 'kern', 'liga', 'clig', 'calt';

    }

    ul {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }

    li {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }

    html {
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        overflow-x: hidden;
    }

    #react-player iframe {
        width: 100%;
        height: 100%;
    }

    img {
        display: block;
        max-width: 100%;
        width: 100%;
        height: auto;
    }
}

